# freeshard

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.bkp  README.md  agents.md  config.toml  config.yml  docker-compose.yml  download_backup.sh  justfile  local_config.toml  local_config.yml  management_mock.py  pyproject.toml  pytest.ini  setup.py  test_requests.http
.run/: management_mock.run.xml  run for portal_controller.run.xml  run.run.xml  tests (full).run.xml  tests (sparse).run.xml  tests.run.xml
.serena/: project.yml
data/: access_denied.html  freeshard_ascii  freeshard_ascii.jinja  splash.html  traefik.yml  traefik_no_ssl.yml
deploy_tools/: .gitignore  bootstrap.sh  docker-compose.yml  get-pairing-code.sh  reset.sh
migrations/: 0001-init.sql  0001_initial_schema.py  shard-core-0001-init.sql  shard-core-0002-app-secrets.sql  shard-core-0002-app-status-message.sql  shard-core-0002-users.sql  shard-core-0003-oidc.sql
portal_core/: __init__.py  database.py
scripts/: generate_docker_compose_model.py  generate_traefik_config_model.py  generate_traefik_dyn_config_model.py
shard_core/: __init__.py  app.py  app_factory.py  settings.py
tests/: __init__.py  config.toml  config.yml  conftest.py  docker-compose.yml  docker-compose_network_portal.yml  test_api.py  test_app_compose_pinning.py  test_app_error.py  test_app_install_crash_recovery.py  test_app_installation.py  test_app_last_access.py  test_app_last_access_cache.py  test_app_lifecycle.py  test_app_lifecycle_pause.py  test_app_meta_migration.py  test_app_pause_lifecycle.py  test_app_proxy.py  test_app_reporting.py  test_app_secrets.py  test_app_status_message.py  (+44 more)
(+276 files in other folders)
